add other targets to makefile for unit2

--- a/unit2/Makefile
+++ b/unit2/Makefile
@@ -5,3 +5,21 @@ checkpoint2.1.bin:	checkpoint2.1.kc
 
 test2.1:	checkpoint2.1.bin
 	xmega65 -kickup checkpoint2.1.bin
+
+checkpoint2.2.bin:	checkpoint2.2.kc
+	${HOME}/OS2019StudentMaterial/kickc/bin/kickc.sh -a $<
+
+test2.2:	checkpoint2.2.bin
+	xmega65 -kickup checkpoint2.2.bin
+
+checkpoint2.3.bin:	checkpoint2.3.kc
+	${HOME}/OS2019StudentMaterial/kickc/bin/kickc.sh -a $<
+
+test2.3:	checkpoint2.3.bin
+	xmega65 -kickup checkpoint2.3.bin
+
+checkpoint2.4.bin:	checkpoint2.4.kc
+	${HOME}/OS2019StudentMaterial/kickc/bin/kickc.sh -a $<
+
+test2.4:	checkpoint2.4.bin
+	xmega65 -kickup checkpoint2.4.bin
