--- a/unit4/Makefile
+++ b/unit4/Makefile
@@ -3,11 +3,11 @@ all:	checkpoint4.1.bin
 pad:	pad.c
 	gcc -o pad pad.c
 
-userspace4.1.prg:	userspace4.1.kc myabi.kc pad
+userspace4.1.prg:	userspace4.1.kc pad
 	${HOME}/OS2019StudentMaterial/kickc/bin/kickc.sh -Onoloophead -a $<
 	./pad userspace4.1.prg
 
-userspace4.2.prg:	userspace4.2.kc myabi.kc pad
+userspace4.2.prg:	userspace4.2.kc pad
 	${HOME}/OS2019StudentMaterial/kickc/bin/kickc.sh -Onoloophead -a $<
 	./pad userspace4.2.prg
 
